meta title and description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>アクセント辞典</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" name="アクセント辞典" content="日本語アクセント辞典"/>
 <head>
 	<style type="text/css">
 		.tonetext {
