set font size 20px

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" name="アクセント辞典" content="日本語アクセント辞典"/>
 <head>
 	<style type="text/css">
+		body {
+			font-size:20px;
+		}
 		.tonetext {
 			align-items: center;
 			display: inline;
