--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 			border-bottom: 1px solid red;
 			border-right: 1px solid red;
 		}
+		.lowtonenextandprevioushigh {
+			border-bottom: 1px solid red;
+			border-left: 1px solid red;
+			border-right: 1px solid red;
+		}
 	</style>
 </head>
 <body></body>
