rework accent line rendering

--- a/index.html
+++ b/index.html
@@ -17,17 +17,12 @@
 		.lowtone {
 			border-bottom: 1px solid red;
 		}
-		.lowtoneprevioushigh {
-			border-bottom: 1px solid red;
-			border-left: 1px solid red;
+		.hightonenextlow {
+			border-top: 1px solid red;
+			border-right: 1px solid red;
 		}
 		.lowtonenexthigh {
 			border-bottom: 1px solid red;
-			border-right: 1px solid red;
-		}
-		.lowtonenextandprevioushigh {
-			border-bottom: 1px solid red;
-			border-left: 1px solid red;
 			border-right: 1px solid red;
 		}
 	</style>
