--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>アクセント辞典</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" name="アクセント辞典" content="日本語アクセント辞典"/>
+<title>accentjiten.com - Japanese pitch accent dictionary</title>
+<meta name="description" content="オンライン日本語アクセント辞典"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
 	<style type="text/css">
 		body {
