fix meta tag and description

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<title>accentjiten.com: Online Japanese pitch accent dictionary</title>
-<meta name="description" content="オンライン高低アクセント辞典"/>
+<title>accentjiten.com: アクセント辞典</title>
+<meta name="description" content="オンライン日本語アクセント辞書。 An online Japanese pitch accent dictionary."/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
 	<style type="text/css">
