--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>accentjiten.com: アクセント辞典</title>
-<meta name="description" content="オンライン日本語アクセント辞書。 An online Japanese pitch accent dictionary."/>
+<meta name="description" content="An online Japanese pitch accent dictionary. オンライン日本語アクセント辞書。"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
 	<style type="text/css">
