fix meta tag and description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>accentjiten.com - アクセント辞典</title>
+<title>アクセント辞典: accentjiten.com</title>
 <meta name="description" content="An online Japanese pitch accent dictionary. オンライン日本語アクセント辞典。"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
