--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>アクセント辞典: accentjiten.com</title>
 <meta name="description" content="An online Japanese pitch accent dictionary. オンライン日本語アクセント辞典。"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 	<style>
 		body {
