remove the midashigo brackets, adjust font sizes

--- a/index.html
+++ b/index.html
@@ -41,28 +41,25 @@
 		}
 		.results-counter {
 			margin: 4px 0;
-			font-size: 1.1rem;
+			font-size: 1rem;
 			color: #555;
 		}
 		.entry {
 			background-color: white;
 			border: 1px solid #ddd;
 			border-radius: 5px;
-			margin-bottom: 2px;
+			margin-bottom: 5px;
 			padding: 1px 13px 1px 0px;
-			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06);
 			width: fit-content;
 			white-space: nowrap;
 			min-width: 100%;
 			box-sizing: border-box;
 		}
-		.entry-title-bracket {
-			font-size: 1.35rem;
-			color: #bbb;
-		}
 		.entry-title {
-			font-size: 1.4rem;
-			padding-right: 5px;
+			font-size: 1.25rem;
+			padding-right: 8px;
+			padding-left: 14px;
 		}
 		.data-content {
 			display: inline-block;
