added conjugations and inflections

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
 			font-size: 0.6rem;
 			vertical-align: middle;
 		}
+        .conj-button {
+            border-radius: 3px;
+            margin-left: 15px;
+            font-size: 0.6rem;
+			color: #bbb;
+			text-decoration: none;
+			cursor: pointer;
+        }
+        .conj-table {
+			border-collapse: collapse;
+            margin-left: 15px;
+		}
+		.conj-table th, .conj-table td, .conj-table tr {
+            border: 2px solid black;
+			border-collapse: collapse;
+        }
 		.tonetext {
 			align-items: center;
 			display: inline;
