--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<style>
 		body {
 			font-family: Arial, sans-serif;
+			text-size-adjust: none;
 			background-color: #f9f9f9;
 			margin: 0;
 			padding: 0;
