fix meta viewport in <head>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="An online Japanese pitch accent dictionary. オンライン日本語アクセント辞典。"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="google-site-verification" content="B5m0GOG08ay81i2iYZM69W60mxMYFToP3hi1aIy2cZ4" />
 	<style>
 		body {
