--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 		.conj-button {
 			border-radius: 3px;
 			margin-left: 15px;
+            font-size: 0.6rem;
 			color: #bbb;
 			text-decoration: none;
 			cursor: pointer;
