corrected website title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<title>アクセント辞典: accentjiten.com</title>
+	<title>アクセント辞典 - An online Japanese pitch accent dictionary</title>
 	<meta name="description" content="An online Japanese pitch accent dictionary. オンライン日本語アクセント辞典。"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
