corrected website title

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 </head>
 <body>
 	<header>
-		<h1>accentjiten [alpha]</h1>
+		<h1>accentjiten [beta]</h1>
 	</header>
 </body>
 <script src="accentjiten.js"></script>
